pet delete. added card deletion
